// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MonsterReviewModal > opens modal when review button is clicked 1`] = `
<div>
  <button
    aria-label="Review button"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1l3bbxn-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Review
  </button>
</div>
`;

exports[`MonsterReviewModal > renders review button correctly 1`] = `
<div>
  <button
    aria-label="Review button"
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary review-button css-1l3bbxn-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Review
  </button>
</div>
`;
